--- a/config.ini
+++ b/config.ini
@@ -6,14 +6,14 @@
 ; 注释：学业、科研、就业、就医、经院系批准的其它必要事项
 出入校事由: 科研
 
-出入校事由详细描述: 前往王选计算机研究所实习
+出入校事由详细描述: 前往资源西楼实习
 
 [out]
 
 ; 注释：只支持填写北京哦
 出校目的地: 北京
 
-出校行动轨迹: 燕园东门/东南门 - 王选计算机研究所 - 燕园东门/东南门
+出校行动轨迹: 燕园南门 - 北京大学资源西楼 - 燕园南门
 
 [in]
 
